force-app/main/default/objects/custom_create274__c/custom_create274__c.object-meta.xml
<CustomObject>
    <label>Custom created object274</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects274</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>