force-app/main/default/objects/custom_create274__c/fields/custom_create_274field553__c.field-meta.xml
<CustomField>
    <fullName>custom_create_274field553__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 274field553</label>
    <type>Checkbox</type>
</CustomField>